test_suite5/ALAN/test_suite/alan-2022-examples/failing/003070_mutation.alan
source k begin if 5 then end end
